--- a/src/peerMessages/Base.lproj/Main.storyboard
+++ b/src/peerMessages/Base.lproj/Main.storyboard
@@ -56,10 +56,10 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qXn-uN-tsB">
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qXn-uN-tsB">
                                         <rect key="frame" x="278" y="0.0" width="64" height="36"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="64" id="Q02-hN-SXN"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="64" id="Q02-hN-SXN"/>
                                         </constraints>
                                         <state key="normal" title="Send"/>
                                         <connections>
